# Avocado

./: .gitignore  LICENSE  Makefile  README.md  avocado.gyp  tools.gyp
agui/: action.cc  action.cc.frame.inl  action.cc.inl  action.h  app-1.h  app.cc  app.h  audio-player.cc  audio-player.h  bezier.cc  bezier.h  box.cc  box.h  button.cc  button.h  clip.cc  clip.h  css.cc  css.cc.inl  css.h  display-port.cc  display-port.h  div.cc  div.h  draw.cc  draw.h  event.cc  event.h  font.h  gradient.cc  gradient.h  gui.gypi  hybrid.cc  hybrid.h  image-codec.h  image.cc  image.h  indep.cc  indep.h  input.cc  (+56 more)
agui/font/: font-1.h  font.cc  font.cc.1.inl  font.cc.2.inl  font.cc.3.inl  font.cc.family.inl  font.cc.font.inl  font.cc.glyph.inl
agui/image/: codec-gif.cc  codec-jpeg.cc  codec-png.cc  codec-pvrtc.cc  codec-tga.cc  codec-webp.cc  codec.cc
agui/ogl/: ogl-font.cc  ogl-texture.cc  ogl.cc  ogl.cc.inl  ogl.h  ogles2.cc  ogles2.h
agui/ogl/glsl/: __.glsl  box-border-radius.glsl  (+11 more)
agui/ogl/glsl-es2/: es2-box-border-radius.glsl  es2-box-border.glsl  es2-box-color-radius.glsl  es2-box-image-radius.glsl  es2-box-radius_.glsl  es2-box_.glsl  es2-sprite.glsl  es2-util_.glsl
agui/os/: android-app.cc  android-keyboard.cc  android-media-codec.cc  android-ogl.cc  android-ogl.h  android-pcm-audio-track.cc  android-pcm-player.cc  ios-app.h  ios-app.mm  ios-image-codec.mm  ios-keyboard.mm  ios-media-codec.mm  ios-ogl.h  ios-ogl.mm  ios-pcm-player.mm  ios-text-input.h  ios-text-input.mm
android/: avocado.cc  avocado.h
autil/: array.cc  array.cc.inl  array.h  array.h.inl  buffer.cc  buffer.h  cb.cc  cb.h  codec.cc  codec.h  container.h  date.cc  env.h  error-code.h  error.cc  error.h  event.h  fs-reader.cc  fs-search.cc  fs.cc  fs.h  handle.h  http-cookie.cc  http-cookie.h  http.cc  http.h  iterator.h  jsa.cc  jsa.h  json.cc  json.h  list.h  list.h.inl  localstorage.cc  localstorage.h  macros.h  map.cc  map.h  map.h.inl  net.cc  (+20 more)
autil/os/: android-fs.cc  android-jni.cc  android-jni.h  android-log.cc  android-log.h  android-sys.cc  ios-fs.mm  ios-sys.mm  linux-fs.cc  linux-sys.cc  osx-fs.mm  osx-sys.mm
av8/: av8.cc  av8.h  avocado.js  buffer.cc  debug-1.h  debug.cc  event-1.h  event.cc  event.js  ext.js  fs-1.h  fs-reader.cc  fs.cc  gui-action.cc  gui-app.cc  gui-audio-player.cc  gui-box.cc  gui-button.cc  gui-clip.cc  gui-css.cc  gui-display-port.cc  gui-div.cc  gui-event.cc  gui-font.cc  gui-hybrid.cc  gui-image.cc  gui-indep.cc  gui-input.cc  gui-label.cc  gui-layout.cc  gui-limit.cc  gui-panel.cc  gui-player.h  gui-root.cc  gui-scroll.cc  gui-span.cc  gui-sprite.cc  gui-text-font.cc  gui-text-node.cc  gui-text.cc  (+19 more)
demo/: app.keys
demo/examples/: about.jsx  action.jsx  checkbox.jsx  components.jsx  dialog.jsx  fs.jsx  http.jsx  icons.jsx  index.jsx  input.jsx  lib.keys  library.jsx  list.jsx  media.jsx  nav.jsx  overlay.jsx  review.jsx  stepper.jsx  storage.jsx  zlib.jsx
demo/simple/: index.jsx  lib.keys
demo/video/: index.jsx  lib.keys
depe/curl/: curl.gyp
depe/ffmpeg/: ffmpeg.gyp
depe/libjpeg-turbo/: jconfigint.h  libjpeg.gyp
depe/libpng/: libpng.gyp
depe/openssl/: openssl.gyp  openssl.gypi
depe/zlib/: zlib.gyp
libs/gui/: action.js  app.js  audio.js  checkbox.js  checkbox.jsx  css.js  ctr.js  dialog.js  dialog.jsx  display_port.js  font.js  gui.js  lib.keys  list.js  list.jsx  nav.js  nav.jsx  overlay.js  overlay.jsx  stepper.js  stepper.jsx  value.js
libs/util/: buffer.js  event.js  fs.js  http.js  keys.js  lib.keys  path.js  service.js  storage.js  sys.js  util.js  zlib.js
libs/xml/: document.js  element.js  exception.js  lib.keys  named-node-map.js  node.js  parser.js  xml.js
test/: demo.cc  demo.mm  test-buffer.cc  test-curl.cc  test-curl2.cc  test-event.cc  test-ffmpeg.cc  test-float.cc  test-freetype.cc  test-fs-async.cc  test-fs.cc  test-gui.cc  test-http-cookie.cc  test-http.cc  test-http2.cc  test-https.cc  test-ios-run-loop.mm  test-js.cc  test-json.cc  test-list.cc  test-localstorage.cc  test-map.cc  test-net-ssl.cc  test-net.cc  test-ssl.cc  test-string.cc  test-thread.cc  test-uv.cc  test-v8-bind-gui.cc  test-v8-bind.cc  test-zlib.cc  test.cc  test.gypi  test.html  test.plist
test/android/app/: CMakeLists.txt  build.gradle
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/assets/: demo  libs
test/android/app/src/main/res/values/: strings.xml
test/android/app/src/main/res/xml/: whisperplay.xml
test/res/: test-v8-bind-module.js  test-v8-bind.js
test/test_js/: lib.keys
tools/: build-ios.sh  build-product.js  check.js  common.gypi  configure.js  generate-font-natives.js  generate-glsl-natives.js  generate-js-natives.js  install-android-toolchain  jsa-shell.cc  product.gypi  server.js  server.keys  test-multiple-service.js  tools.gypi
(+46 files in other folders)
